# RAG-Lighter

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_CN.md  WIKI.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
docs/: ENHANCED_RAG_V2.md  PARENT_CHILD_CHUNKING.md
examples/: agentic_rag_with_mcp.py  discussion_example.py  enhanced_rag_example.py  gemin_example_uses.py  gemini_example_uses.py  ingestion_example.py  parent_child_rag_example.py  rag_example.py  simple_agentic_rag_example.py  simple_rag_api_example.py  simple_rat_api_example.py  vlm_ingestion.py
src/raglight/: __init__.py
src/raglight/cli/: main.py
src/raglight/config/: agentic_rag_config.py  rag_config.py  rat_config.py  settings.py  vector_store_config.py
src/raglight/cross_encoder/: cross_encoder_model.py  huggingface_cross_encoder.py
src/raglight/document_processing/: __init__.py  code_processor.py  dl_text_processor.py  document_processor.py  document_processor_factory.py  parent_child_processor.py  pdf_processor.py  text_processor.py  vlm_pdf_processor.py
src/raglight/embeddings/: __init__.py  bge_m3_embeddings.py  embeddings_model.py  gemini_embeddings.py  huggingface_embeddings.py  ollama_embeddings.py  openai_embeddings.py
src/raglight/evaluation/: __init__.py  ragas_evaluator.py
src/raglight/llm/: __init__.py  deepseek_model.py  gemini_model.py  kimi_model.py  lmstudio_model.py  mistral_model.py  ollama_model.py  openai_model.py
src/raglight/models/: data_source_model.py
src/raglight/rag/: __init__.py  agentic_rag.py  builder.py  parent_child_rag.py  query_rewriter.py  rag.py  simple_agentic_rag_api.py  simple_rag_api.py  strategic_rag.py  strategy_selector.py
src/raglight/rag/agentic_rag_utils/: rag_tools.py
src/raglight/rat/: rat.py  simple_rat_api.py
src/raglight/scrapper/: github_scrapper.py
src/raglight/vectorstore/: __init__.py  chroma.py  milvus.py  parent_child_chroma.py  vector_store.py
tests/: test_config.py
tests/prompts/: prompt.txt
tests/tests_embeddings/: test_gemini_embeddings.py  test_huggingface_embeddings.py  test_ollama_embeddings.py  test_openai_embeddings.py
tests/tests_llm/: test_gemini_model.py  test_ollama_model.py
tests/tests_rag/: test_builder.py
tests/tests_vector_store/: test_chroma_vector_store.py
tests/tests_vector_store/fixtures/: data.csv
