[project]
name = "raglight"
version = "2.8.1"
description = "RAGLight is a lightweight and modular Python library for implementing Retrieval-Augmented Generation (RAG). It enhances the capabilities of Large Language Models (LLMs) by combining document retrieval with natural language inference."
authors = [
    {name = "Bessouat40",email = "roman.bessouat@orange.fr"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mistralai==1.5.0",
    "smolagents[mcp]==1.21.1",
    "ollama==0.4.0",
    "typing==3.7.4.3",
    "typing-extensions==4.12.2",
    "litellm==1.61.15",
    "typer==0.16.0",
    "rich==14.0.0",
    "quo==2023.5.1",
    "questionary==2.0.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "google-genai==1.2.0",
    "black>=25.12.0",
    "langchain==1.2.0",
    "langchain-text-splitters==1.1.0",
    "langchain-core==1.2.5",
    "langgraph==1.0.5",
    "pymupdf==1.26.7",
    "chromadb==0.5.23",
    "sentence-transformers==5.1.2",
    "google-generativeai==0.8.5",
]
[project.scripts]
raglight = "raglight.cli.main:app"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
raglight = { workspace = true }

[dependency-groups]
dev = [
    "raglight",
]
